# OGX-Wireless-Lite

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  sdkconfig  sdkconfig.defaults
components/patches/: README.md
src/: CMakeLists.txt  Gamepad.cpp  Gamepad.h  bp32_rumble.h  bp32_task.cpp  bp32_task.h  freertos_hook.c  main.c  tusb_config.h  usbd_config.h  usbd_task.cpp  usbd_task.h  version.h
src/FreeRTOSConfig/: FreeRTOSConfig.h
src/ble_server/: att_delayed_response.gatt  att_delayed_response.h  ble_server.cpp  ble_server.h
src/user_settings/: input_mode.cpp  input_mode.h  nvs_helpers.cpp  nvs_helpers.h  user_settings.cpp  user_settings.h
src/utilities/: scaling.cpp  scaling.h
